Production mode, more info on admin console.

--- a/splash/public/challenge.html
+++ b/splash/public/challenge.html
@@ -40,6 +40,9 @@ Here are my employee credentials:
 username: jameson
 password: hunter72
 
+By the way, I saw an admin once and he got a more advanced employee area. See if
+you can get into that one. I think it'll help.
+
 You can log in <a href="bank.php">here</a>. Thanks!</pre>
     </div>
 
