Makefiles, prepare deploy, change keys

--- a/splash/public/mail/isn.html
+++ b/splash/public/mail/isn.html
@@ -11,7 +11,7 @@
    <META http-equiv="Content-Type" content="text/html; charset=us-ascii">
  </HEAD>
  <BODY BGCOLOR="#ffffff">
-   <H1>[North_Bank] Important Security Notice</H1>
+   <H1>[North-Bank] Important Security Notice</H1>
     <B>Wesley Scott</B>
     <A HREF="mailto:no.this.isnt.a.real@email.address"
        TITLE="[North-Bank] Important Security Notice">wscott at personal.wscott.com
