--- a/solutions/solutions.html
+++ b/solutions/solutions.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HTN 2015 CTF Solutions</title>
+    <title>Hack the North 2015 CTF Solutions</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.1.0/octicons.min.css">
@@ -17,12 +17,12 @@
   <body>
 
     <header class="container">
-      <h1>HTN 2015 CTF Solutions</h1>
+      <h1>Hack the North 2015 CTF Solutions</h1>
     </header>
 
     <main class="container">
       <p>
-        Congratulations to all who attempted the HTN 2015 CTF! This was a difficult
+        Congratulations to all who attempted the Hack the North 2015 CTF! This was a difficult
         CTF that covered a very wide range of topics. Not everyone was able to
         complete the CTF&mdash;indeed, most were not&mdash;but everyone made a
         great effort. We were impressed at the degree of collaboration, especially
